--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aws-amplify": "^6.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-unity-webgl": "^9.5.0",
